[gd_scene load_steps=5 format=3 uid="uid://boipvhnjm6t4"]

[ext_resource type="Theme" uid="uid://cvocwk6x1wj7h" path="res://themes/global.tres" id="1_okkqq"]
[ext_resource type="Script" path="res://scripts/utils/debug/debug.gd" id="2_k0bik"]
[ext_resource type="Material" uid="uid://cn7ccwfbj0dqp" path="res://scripts/utils/ui/gaussian_panel.tres" id="3_1sd7a"]
[ext_resource type="StyleBox" uid="uid://dgm5mu51qsew7" path="res://themes/stylebox/global_style_box.tres" id="4_4vs3h"]

[node name="Debug" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 795.0
offset_top = 54.0
offset_right = 1012.0
offset_bottom = 464.0
theme = ExtResource("1_okkqq")
script = ExtResource("2_k0bik")

[node name="Debug" type="Button" parent="."]
layout_mode = 0
offset_left = 165.0
offset_top = -29.0
offset_right = 365.0
offset_bottom = 42.0
scale = Vector2(0.25, 0.25)
focus_mode = 0
toggle_mode = true
text = "Debug"

[node name="Container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="Background" type="Panel" parent="Container"]
texture_filter = 2
material = ExtResource("3_1sd7a")
layout_mode = 0
offset_left = 1.0
offset_right = 218.0
offset_bottom = 413.0
mouse_filter = 1
theme = ExtResource("1_okkqq")
theme_override_styles/panel = ExtResource("4_4vs3h")

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 218.0
offset_bottom = 181.0
theme_override_constants/separation = 5

[node name="TimescaleL" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Timescale"

[node name="Timescale" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="OptionButton" type="CheckBox" parent="Container/VBoxContainer/Timescale"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1

[node name="HSlider" type="HSlider" parent="Container/VBoxContainer/Timescale"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="Container/VBoxContainer/Timescale"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"

[node name="Pause" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Pause Physics"
flat = true

[node name="PlayerState" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Player State"
flat = true

[node name="ShowTerminal" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Show Terminal"
flat = true

[node name="FreeLook" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Pan Camera"
flat = true

[node name="HideFloating" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Hide Floating Node"
flat = true

[node name="EnableParticles" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Enable Particles"
flat = true

[node name="EnableShaders" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Enable Shaders"
flat = true

[node name="EnableWorldEnvironment" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Enable World Environment"
flat = true
